[package]
name = "ca_injector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1"
which = "^4"
glob = "^0.3"
log = "^0.4"

[dev-dependencies]
coyote = "*"
openssl = "*"
tempdir = "*"
env_logger = "*"
