[package]
name = "ca_injector"
version = "0.1.0"
edition = "2021"
authors = ["Erik Hollensbe <git@hollensbe.org>", "Adam Ierymenko <adam.ierymenko@zerotier.com>"]
license = "BSD-3-Clause"
readme = "README.md"
description = "Inject CAs into trust stores; port of mkcert to a library."
repository = "https://github.com/zerotier/ca_injector"
homepage = "https://github.com/zerotier/ca_injector"
keywords = ["tls", "certificate", "zerotier"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1"
which = "^4"
glob = "^0.3"
log = "^0.4"
tempfile = "^3.3.0"

[dev-dependencies]
coyote = ">=0"
openssl = ">=0"
tempdir = ">=0"
env_logger = ">=0"
